stylesheet link added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="./jquery.js"></script>
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="Styles2.css">
     
     <link rel="stylesheet" href="./bootstrap.css">
     <title>NEWS</title>
