--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
        <div class="name">
            <h3>NEWSWORLD</h3>
        </div>
+       <button class="btn-danger" id="Articles">Top Articles</button>
+       <button class="btn-danger" id="bitcoin">Bitcoin news</button>
            <form class="news-input" autocomplete="off">
                <input type="text" name="query" id="query" placeholder="  Enter Country code eg : CA">
                <button type="button" class="btn btn-outline-danger " id="searchC">
