--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <button class="btn-danger" id="Articles">Top Articles</button>
        <button class="btn-danger" id="bitcoin">Bitcoin news</button>
            <form class="news-input" autocomplete="off">
-               <input type="text" name="query" id="query" placeholder="  Enter Country code eg : CA">
+               <input type="text" name="query" id="query" placeholder="  Enter Country code eg : IN">
                <button type="button" class="btn btn-outline-danger " id="searchC">
                     News <span class="badge badge-danger">Get Results</span>
                 </button>
